# projeto_api_produtos

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: python-cicd.yml
app/: main.py
app/db/: base.py  connection.py  models.py
app/migrations/: env.py
app/migrations/versions/: 04e3ebe91adc_add_user.py  6485145e00b6_add_categories_table.py  7808a66383b5_add_user.py  bd7c85fac8d2_add_user.py  f484be150f6e_add_products_table.py
app/routes/: category_routes.py  product_routes.py  user_routes.py
app/schemas/: category.py  product.py  user.py
app/test/: conftest.py
app/test/routes/: test_category_routes.py  test_product_routes.py  test_user_routes.py
app/test/schemas/: test_category_schema.py  test_product_schema.py  test_user_schema.py
app/test/use_cases/: test_category_use_case.py  test_product_use_case.py  test_product_user_case.py  test_user_use_cases.py
app/use_cases/: category.py  product.py  user.py
